fixed layout issue

--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,42 @@
+html, body{
+    height: 100%;
+    background-color:rgb(226,232,241);
+}
+
+
+
 .container{
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
+    height: 100%;
+    margin: 0px;
+    gap: 0px;
 }
 
 .sidebar{
     color: white;
     border: 1px solid black;
-    background-color: rgb(83, 121, 190);
+    background-color: rgb(50,146,212);
     display: grid;
-    grid-template-rows: 1/7;
+    grid-column: 1/2;
+    grid-row: 1/3;
+
+    
+    
 }
 
+
+
+.headers{
+    display: grid;
+    grid-column: 2/4;
+    background-color: white;
+    
+}
+.container>.mid>.headers{
+    display: grid;
+    grid-column: 2/4;
+}
 .header{
     color: black;
     border: 1px solid black;
@@ -19,7 +45,7 @@
 }
 .header>.bar{
     padding: 10px;
-    background-color: grey;
+    background-color: rgb(226,232,241);
     border-radius: 200px;
 }
 
@@ -27,6 +53,7 @@
     border: 1px solid black;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    padding: 32px 0px;
 }
 
 .subheader>.firsthalf{
@@ -42,13 +69,59 @@
 .projectContainer{
     border: 1px solid black;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
 }
 
+.project{
+    border: 1px solid red;
+    padding: 20% 0px;
+    margin: 15px;
+    padding-left: 10px;
+    background-color: white;
+    
+}
 .endbar{
     border: 1px solid black;
+    display: grid;
+    background-color: white;
+    
+}
+
+.second-third{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
 }
 
 .announcements{
+    display: grid;
     border: 1px solid black
+}
+
+.trending{
+    display: grid;
+    border: 1px solid black;
+}
+
+.avatar>img{
+    
+    border-radius: 200px;
+    height: 40px
+}
+
+.subheader>.firsthalf>.avatar>img{
+    height: 60px;
+}
+
+.projContainer{
+    margin: 0px 50px;
+    margin-top: 10px;
+
+}
+.buttons>button{
+    border-radius: 200px;
+    background-color: rgb(50,146,212);
+    color: white;
+    padding: 10px 30px;
+    font-size: 16px;
+ 
 }
